--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ json5==0.9.25
 mccabe==0.6.1
 mypy-extensions==1.0.0
 pathspec==0.12.1
+pillow==10.3.0
 platformdirs==4.2.0
 pycodestyle==2.8.0
 pyflakes==2.4.0
@@ -27,3 +28,4 @@ six==1.16.0
 sqlparse==0.5.0
 tomli==2.0.1
 tqdm==4.66.2
+tzdata==2024.1
